Added constant beta config

--- a/.env_master
+++ b/.env_master
@@ -1,4 +1,4 @@
-#
+####################################################################################################
 # Environment used by docker-compose
 #
 # git clone -b development https://github.com/HarlekinSimplex/nexus.git
@@ -9,7 +9,6 @@
 #  -v "$(pwd)"/nexus_root/.nexus:/home/bsb/.nexus \
 #  --device /dev/snd:/dev/snd \
 #  --device /dev/ttyACM0:/dev/ttyLORA \
-#  --env SOUNDMODEM_AUTOSTART=False \
 #  bsbdock/nexus:dev_linux-arm bash
 #
 # docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /bsb/nexus_server/nexus_server.py
@@ -71,17 +70,6 @@
 #default:#NOMADNET_AUTOSTART=False
 #default:
 #default:#################################################################
-#default:# Default nexus server configuration
-#default:# If your local environment differs uncomment and change the required setting
-#default:#NEXUS_CONFIG=/home/bsb/.nexus
-#default:#NEXUS_PORT=4281
-#default:#NEXUS_ASPECT=home
-#default:#NEXUS_ROLE={"cluster":"home"}
-#default:#NEXUS_LONGPOLL=17280
-#default:#NEXUS_TIMEOUT=43200
-#default:#NEXUS_BRIDGE=[]
-#default:
-#default:#################################################################
 #default:# Default Django SuperUser settings
 #default:#DJANGO_SUPERUSER_USERNAME=admin
 #default:#DJANGO_SUPERUSER_PASSWORD=admin
@@ -119,32 +107,49 @@
 #default:#DIREWOLF_CAT_CODEC_1_SOUND_CARD=CODEC
 #default:#DIREWOLF_CAT_CODEC_1_PCM_PLAYBACK_SWITCH=on
 #default:#DIREWOLF_CAT_CODEC_1_PCM_PLAYBACK_VOLUME=80%
+#default:
+#default:#################################################################
+#default:# Default nexus server configuration
+#default:# If your local environment differs uncomment and change the required setting
+#default:#
+#default:# Configuration Schema: <Aspect>[Cluster,Gateway]:[Bridge-1]..:[Bridge-N]
+#default:# Default configuration <home>[home]
+#default:#################################################################
+#default:#NEXUS_CONFIG=/home/bsb/.nexus
+#default:#NEXUS_PORT=4281
+#default:#NEXUS_ASPECT=home
+#default:#NEXUS_ROLE={"cluster":"home"}
+#default:#NEXUS_BRIDGE=[]
+#default:#NEXUS_LONGPOLL=17280
+#default:#NEXUS_TIMEOUT=43200
+#default:
+#default:##################################################################################################
+#default:# The configuration templates provided here are just examples the need to be adopted to you specific situation.
+#default:# The template refer to RNS, Direwolf, Nomadnet and Nexus application config files specified like this:
+#default:#   RNS_CONFIG=/home/bsb/.reticulum/...
+#default:#   NOMADNET_CONFIG=/home/bsb/.nomadnetwork/...
+#default:#   DIREWOLF_CONFIG=/home/bsb/.direwolf/...
+#default:#   NEXUS_CONFIG=/home/bsb/.nexus/...
+#default:#
+#default:# ATTENTION:
+#default:# The leading path specs like '/home/bsb/.reticulum' must not be changed because these paths are static
+#default:# bsbdock/nexus container internal paths and not related to the host filesystem but are used as mount points
+#default:# for the config files stored at the host file system for easy access as bind volumes during container startup.
+#default:#
+#default:# The default mount points at the host filesystem used for the above mentioned application configuration
+#default:# file locations are:
+#default:#   RNS Config       ~/nexus/nexus_root/.reticulum/...
+#default:#   Nomadnet Config  ~/nexus/nexus_root/.nomadnetwork/...
+#default:#   Direwolf Config  ~/nexus/nexus_root/.direwolf/...
+#default:#   Nexus Config     ~/nexus/nexus_root.nexus/...
+#default:#
+#default:# For more information how environment variables are used during container startup please review
+#default:# the docker compose file 'docker-compose.yml' and the master template file '.env_master'
 
-################################################################
-# My personal default development configuration
-# This section can be safely removed
-# Configuration for Cockpit Dev Environment
-
-# Cockpit
-#cockpit:COMPOSE_PROFILES=auto-update
-#cockpit:WATCHTOWER_POLL_INTERVAL=300
-#cockpit:NEXUS_WATCHTOWER=nexus-watchtower_cockpit
-#cockpit:RNS_AUTOSTART=True
-#cockpit:NOMADNET_AUTOSTART=True
-#cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
-#cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd63
-#cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
-#cockpit:NEXUS_CONTAINER=nexus-cockpit
-#cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
-#cockpit:NEXUS_NETWORK=nexus-cockpit_net
-#ccckpit:NEXUS_ASPECT=cockpit
-#cockpit:NEXUS_ROLE={"cluster":"cockpit"}
-#cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
-#cockpit:NEXUS_COMMAND=start_nexus.sh
-#cockpit:#NEXUS_LONGPOLL=60
-#cockpit:#NEXUS_TIMEOUT=70
-
-# Paulchen
+# --------------------------------------------------------
+# 'paulchen' paulchen  <home>[home]
+# bash nexus_pull.sh paulchen
+# --------------------------------------------------------
 #paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
 #paulchen:DIREWOLF_AUTOSTART=False
 #paulchen:DIREWOLF_INSTANCES=VOX_Alpha_1
@@ -166,7 +171,11 @@
 #paulchen:#NEXUS_LONGPOLL=60
 #paulchen:#NEXUS_TIMEOUT=70
 
-# Karlchen
+# --------------------------------------------------------
+# 'karlchen' karlchen  <home>[home]
+# bash nexus_pull.sh karlchen
+# --------------------------------------------------------
+#karlchen:NEXUS_COMPOSE_HOME=~/nexus
 #karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
 #karlchen:DIREWOLF_AUTOSTART=False
 #karlchen:DIREWOLF_INSTANCES=VOX_Alpha_1
@@ -176,7 +185,6 @@
 #karlchen:RNS_AUTOSTART=False
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
 #karlchen:NOMADNET_AUTOSTART=False
-#karlchen:NEXUS_COMPOSE_HOME=~/nexus
 #karlchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #karlchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #karlchen:NEXUS_CONTAINER=nexus-twins
@@ -188,7 +196,11 @@
 #karlchen:#NEXUS_LONGPOLL=60
 #karlchen:#NEXUS_TIMEOUT=70
 
-# Orange
+# --------------------------------------------------------
+# 'orangepi' orangepi <home>[home]
+# bash nexus_pull.sh orangepi
+# --------------------------------------------------------
+#orangepi:NEXUS_COMPOSE_HOME=~/nexus
 #orangepi:DIREWOLF_CONFIG=/home/bsb/.direwolf/orangepi
 #orangepi:DIREWOLF_AUTOSTART=False
 #orangepi:DIREWOLF_INSTANCES=VOX_Alpha_1
@@ -201,7 +213,6 @@
 #orangepi:RNS_AUTOSTART=False
 #orangepi:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orangepi
 #orangepi:NOMADNET_AUTOSTART=False
-#orangepi:NEXUS_COMPOSE_HOME=~/nexus
 #orangepi:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #orangepi:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #orangepi:NEXUS_CONTAINER=nexus-orangepi
@@ -209,12 +220,14 @@
 #orangepi:NEXUS_NETWORK=nexus-orangepi_net
 #orangepi:NEXUS_ASPECT=home
 #orangepi:NEXUS_ROLE={"cluster":"home"}
-#orangepi:#NEXUS_ASPECT=delta
-#orangepi:#NEXUS_ROLE={"cluster":"lora"}
 #orangepi:#NEXUS_LONGPOLL=60
 #orangepi:#NEXUS_TIMEOUT=70
 
-# Radiobox
+# --------------------------------------------------------
+# 'radiobox' radiobox <delta>[lora,lora.delta]
+# bash nexus_pull.sh radiobox
+# --------------------------------------------------------
+#radiobox:NEXUS_COMPOSE_HOME=~/nexus
 #radiobox:DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
 #radiobox:DIREWOLF_AUTOSTART=False
 #radiobox:DIREWOLF_INSTANCES=CAT_CODEC_1
@@ -222,7 +235,6 @@
 #radiobox:RNS_AUTOSTART=False
 #radiobox:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
 #radiobox:NOMADNET_AUTOSTART=False
-#radiobox:NEXUS_COMPOSE_HOME=~/nexus
 #radiobox:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
 #radiobox:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
 #radiobox:NEXUS_CONTAINER=nexus-radiobox
@@ -235,7 +247,10 @@
 #radiobox:#NEXUS_LONGPOLL=60
 #radiobox:#NEXUS_TIMEOUT=70
 
-# Radiobox2
+# --------------------------------------------------------
+# 'radiobox2' radiobox2 <delta>[lora]
+# bash nexus_pull.sh radiobox2
+# --------------------------------------------------------
 #radiobox2:NEXUS_COMPOSE_HOME=~/nexus
 #radiobox2:DIREWOLF_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.direwolf/radiobox2
 #radiobox2:DIREWOLF_AUTOSTART=False
@@ -249,7 +264,10 @@
 #radiobox2:#NEXUS_LONGPOLL=60
 #radiobox2:#NEXUS_TIMEOUT=70
 
-# Radiobox3
+# --------------------------------------------------------
+# 'radiobox3' radiobox3 <delta>[lora]
+# bash nexus_pull.sh radiobox3
+# --------------------------------------------------------
 #radiobox3:NEXUS_COMPOSE_HOME=~/nexus
 #radiobox3:DIREWOLF_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.direwolf/radiobox3
 #radiobox3:DIREWOLF_AUTOSTART=False
@@ -262,3 +280,123 @@
 #radiobox3:NEXUS_ROLE={"cluster":"lora"}
 #radiobox3:#NEXUS_LONGPOLL=60
 #radiobox3:#NEXUS_TIMEOUT=70
+
+# --------------------------------------------------------
+# 'cb_home' constant-beta <home>[home]:[delta]
+# bash nexus_pull.sh cb_home
+# --------------------------------------------------------
+#cb_home:NEXUS_COMPOSE_HOME=~/cb.nexus-home
+#cb_home:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/cb_home
+#cb_home:RNS_AUTOSTART=False
+#cb_home:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/cb_home
+#cb_home:NOMADNET_AUTOSTART=False
+#cb_home:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#cb_home:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cb_home:NEXUS_CONTAINER=nexus-home_node01
+#cb_home:NEXUS_CONTAINER_ALIAS=nexus-home_node01
+#cb_home:NEXUS_NETWORK=nexus-home_node01
+#cb_home:NEXUS_PORT_RNSAPI=4251
+#cb_home:NEXUS_PORT_WEB=127.0.0.1:4381
+#cb_home:NEXUS_PORT_JSONAPI=127.0.0.1:4341
+#cb_home:NEXUS_ASPECT=home
+#cb_home:NEXUS_ROLE={"cluster":"home"}
+#cb_home:#NEXUS_LONGPOLL=60
+#cb_home:#NEXUS_TIMEOUT=90
+#cb_home:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8242","cluster":"delta"}]
+
+# --------------------------------------------------------
+# 'cb_delta' constant-beta <delta>[delta]:[home]
+# bash nexus_pull.sh cb_delta
+# --------------------------------------------------------
+#cb_delta:NEXUS_COMPOSE_HOME=~/cb.nexus-delta
+#cb_delta:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/cb_delta
+#cb_delta:RNS_AUTOSTART=False
+#cb_delta:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/cb_delta
+#cb_delta:NOMADNET_AUTOSTART=False
+#cb_delta:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#cb_delta:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cb_delta:NEXUS_CONTAINER=nexus-delta_node02
+#cb_delta:NEXUS_CONTAINER_ALIAS=nexus-delta_node02
+#cb_delta:NEXUS_NETWORK=nexus-delta_node02
+#cb_delta:NEXUS_PORT_RNSAPI=4252
+#cb_delta:NEXUS_PORT_WEB=127.0.0.1:4382
+#cb_delta:NEXUS_PORT_JSONAPI=127.0.0.1:4342
+#cb_delta:NEXUS_ASPECT=delta
+#cb_delta:NEXUS_ROLE={"cluster":"delta"}
+#cb_delta:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"home"}]
+#cb_delta:#NEXUS_LONGPOLL=60
+#cb_delta:#NEXUS_TIMEOUT=90
+
+# --------------------------------------------------------
+# 'cb_hub' constant-beta <delta>[delta,lora.delta]:[dev]
+# bash nexus_pull.sh cb_hub
+# --------------------------------------------------------
+#cb_hub:NEXUS_COMPOSE_HOME=~/cb.nexus-hub
+#cb_hub:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/cb_hub
+#cb_hub:RNS_AUTOSTART=False
+#cb_hub:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/cb_hub
+#cb_hub:NOMADNET_AUTOSTART=False
+#cb_hub:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#cb_hub:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cb_hub:NEXUS_CONTAINER=nexus-delta_node03
+#cb_hub:NEXUS_CONTAINER_ALIAS=nexus-delta_node03
+#cb_hub:NEXUS_NETWORK=nexus-delta_node03
+#cb_hub:NEXUS_PORT_RNSAPI=4253
+#cb_hub:NEXUS_PORT_WEB=127.0.0.1:4383
+#cb_hub:NEXUS_PORT_JSONAPI=127.0.0.1:4343
+#cb_hub:NEXUS_ASPECT=delta
+#cb_hub:NEXUS_ROLE={"cluster":"delta","gate":"lora.delta"}
+#cb_hub:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#cb_hub:#NEXUS_LONGPOLL=60
+#cb_hub:#NEXUS_TIMEOUT=90
+
+# --------------------------------------------------------
+# 'dev' constant-beta <dev>[dev]:[delta]:[cockpit]
+# bash nexus_pull.sh dev
+# --------------------------------------------------------
+#dev:NEXUS_COMPOSE_HOME=~/nexus_dev
+#dev:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/dev
+#dev:RNS_AUTOSTART=False
+#dev:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/dev
+#dev:NOMADNET_AUTOSTART=False
+#dev:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#dev:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#dev:NEXUS_CONTAINER=nexus-dev
+#dev:NEXUS_CONTAINER_ALIAS=nexus-dev
+#dev:NEXUS_NETWORK=nexus-dev_net
+#dev:NEXUS_PORT_RNSAPI=4254
+#dev:NEXUS_PORT_WEB=127.0.0.1:4384
+#dev:NEXUS_PORT_JSONAPI=127.0.0.1:4344
+#dev:NEXUS_ASPECT=dev
+#dev:NEXUS_ROLE={"cluster":"dev"}
+#dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
+#dev:#NEXUS_LONGPOLL=60
+#dev:#NEXUS_TIMEOUT=70
+
+# --------------------------------------------------------
+# 'cockpit' constant-beta <cockpit>[cockpit]:[dev]
+# bash nexus_pull.sh cockpit
+# --------------------------------------------------------
+#cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
+#cockpit:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/cockpit
+#cockpit:RNS_AUTOSTART=False
+#cockpit:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/cockpit
+#cockpit:NOMADNET_AUTOSTART=False
+#cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cockpit:NEXUS_CONTAINER=nexus-cockpit
+#cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
+#cockpit:NEXUS_NETWORK=nexus-cockpit_net
+#cockpit:NEXUS_PORT_RNSAPI=4255
+#cockpit:NEXUS_PORT_WEB=127.0.0.1:4285
+#cockpit:NEXUS_PORT_JSONAPI=127.0.0.1:4345
+#cockpit:NEXUS_ASPECT=cockpit
+#cockpit:NEXUS_ROLE={"cluster":"cockpit"}
+#cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#cockpit:NEXUS_COMMAND=start_nexus.sh
+#cockpit:#COMPOSE_PROFILES=auto-update
+#cockpit:#WATCHTOWER_POLL_INTERVAL=300
+#cockpit:#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
+#cockpit:#NEXUS_LONGPOLL=60
+#cockpit:#NEXUS_TIMEOUT=70
+#cockpit:#NEXUS_COMMAND=start_nexus.sh
