Added all constant beta nodes to config

--- a/.env_master
+++ b/.env_master
@@ -282,6 +282,24 @@
 #radiobox3:#NEXUS_TIMEOUT=70
 
 # --------------------------------------------------------
+# 'cb_reticulum' constant-beta RNS / Nomadnet only
+# bash nexus_pull.sh cb_reticulum
+# --------------------------------------------------------
+#cb_reticulum:NEXUS_COMPOSE_HOME=~/cb.reticulum
+#cb_reticulum:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/cb_reticulum
+#cb_reticulum:RNS_AUTOSTART=False
+#cb_reticulum:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/cb_reticulum
+#cb_reticulum:NOMADNET_AUTOSTART=False
+#cb_reticulum:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#cb_reticulum:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cb_reticulum:NEXUS_CONTAINER=nexus-reticulum
+#cb_reticulum:NEXUS_CONTAINER_ALIAS=nexus-reticulum
+#cb_reticulum:NEXUS_PORT_RNSAPI=4980
+#cb_reticulum:NEXUS_PORT_WEB=127.0.0.1:4880
+#cb_reticulum:NEXUS_PORT_JSONAPI=127.0.0.1:4881
+#cb_reticulum:NEXUS_COMMAND=rnsd
+
+# --------------------------------------------------------
 # 'cb_home' constant-beta <home>[home]:[delta]
 # bash nexus_pull.sh cb_home
 # --------------------------------------------------------
@@ -351,52 +369,52 @@
 #cb_hub:#NEXUS_TIMEOUT=90
 
 # --------------------------------------------------------
-# 'dev' constant-beta <dev>[dev]:[delta]:[cockpit]
-# bash nexus_pull.sh dev
+# 'cb_dev' constant-beta <dev>[dev]:[delta]:[cockpit]
+# bash nexus_pull.sh cb_dev
 # --------------------------------------------------------
-#dev:NEXUS_COMPOSE_HOME=~/nexus_dev
-#dev:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/dev
-#dev:RNS_AUTOSTART=False
-#dev:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/dev
-#dev:NOMADNET_AUTOSTART=False
-#dev:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
-#dev:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
-#dev:NEXUS_CONTAINER=nexus-dev
-#dev:NEXUS_CONTAINER_ALIAS=nexus-dev
-#dev:NEXUS_NETWORK=nexus-dev_net
-#dev:NEXUS_PORT_RNSAPI=4254
-#dev:NEXUS_PORT_WEB=127.0.0.1:4384
-#dev:NEXUS_PORT_JSONAPI=127.0.0.1:4344
-#dev:NEXUS_ASPECT=dev
-#dev:NEXUS_ROLE={"cluster":"dev"}
-#dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
-#dev:#NEXUS_LONGPOLL=60
-#dev:#NEXUS_TIMEOUT=70
+#cb_dev:NEXUS_COMPOSE_HOME=~/nexus_dev
+#cb_dev:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/cb_dev
+#cb_dev:RNS_AUTOSTART=False
+#cb_dev:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/cb_dev
+#cb_dev:NOMADNET_AUTOSTART=False
+#cb_dev:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#cb_dev:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cb_dev:NEXUS_CONTAINER=nexus-dev
+#cb_dev:NEXUS_CONTAINER_ALIAS=nexus-dev
+#cb_dev:NEXUS_NETWORK=nexus-dev_net
+#cb_dev:NEXUS_PORT_RNSAPI=4254
+#cb_dev:NEXUS_PORT_WEB=127.0.0.1:4384
+#cb_dev:NEXUS_PORT_JSONAPI=127.0.0.1:4344
+#cb_dev:NEXUS_ASPECT=dev
+#cb_dev:NEXUS_ROLE={"cluster":"dev"}
+#cb_dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
+#cb_dev:#NEXUS_LONGPOLL=60
+#cb_dev:#NEXUS_TIMEOUT=70
 
 # --------------------------------------------------------
-# 'cockpit' constant-beta <cockpit>[cockpit]:[dev]
-# bash nexus_pull.sh cockpit
+# 'cb_cockpit' constant-beta <cockpit>[cockpit]:[dev]
+# bash nexus_pull.sh cb_cockpit
 # --------------------------------------------------------
-#cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
-#cockpit:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/cockpit
-#cockpit:RNS_AUTOSTART=False
-#cockpit:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/cockpit
-#cockpit:NOMADNET_AUTOSTART=False
-#cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
-#cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
-#cockpit:NEXUS_CONTAINER=nexus-cockpit
-#cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
-#cockpit:NEXUS_NETWORK=nexus-cockpit_net
-#cockpit:NEXUS_PORT_RNSAPI=4255
-#cockpit:NEXUS_PORT_WEB=127.0.0.1:4285
-#cockpit:NEXUS_PORT_JSONAPI=127.0.0.1:4345
-#cockpit:NEXUS_ASPECT=cockpit
-#cockpit:NEXUS_ROLE={"cluster":"cockpit"}
-#cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
-#cockpit:NEXUS_COMMAND=start_nexus.sh
-#cockpit:#COMPOSE_PROFILES=auto-update
-#cockpit:#WATCHTOWER_POLL_INTERVAL=300
-#cockpit:#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
-#cockpit:#NEXUS_LONGPOLL=60
-#cockpit:#NEXUS_TIMEOUT=70
-#cockpit:#NEXUS_COMMAND=start_nexus.sh
+#cb_cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
+#cb_cockpit:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/cb_cockpit
+#cb_cockpit:RNS_AUTOSTART=False
+#cb_cockpit:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/cb_cockpit
+#cb_cockpit:NOMADNET_AUTOSTART=False
+#cb_cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+#cb_cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cb_cockpit:NEXUS_CONTAINER=nexus-cockpit
+#cb_cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
+#cb_cockpit:NEXUS_NETWORK=nexus-cockpit_net
+#cb_cockpit:NEXUS_PORT_RNSAPI=4255
+#cb_cockpit:NEXUS_PORT_WEB=127.0.0.1:4285
+#cb_cockpit:NEXUS_PORT_JSONAPI=127.0.0.1:4345
+#cb_cockpit:NEXUS_ASPECT=cockpit
+#cb_cockpit:NEXUS_ROLE={"cluster":"cockpit"}
+#cb_cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#cb_cockpit:NEXUS_COMMAND=start_nexus.sh
+#cb_cockpit:#COMPOSE_PROFILES=auto-update
+#cb_cockpit:#WATCHTOWER_POLL_INTERVAL=300
+#cb_cockpit:#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
+#cb_cockpit:#NEXUS_LONGPOLL=60
+#cb_cockpit:#NEXUS_TIMEOUT=70
+#cb_cockpit:#NEXUS_COMMAND=start_nexus.sh
