Added all constant beta nodes to config

--- a/.env_master
+++ b/.env_master
@@ -288,7 +288,7 @@
 #cb_reticulum:NEXUS_COMPOSE_HOME=~/cb.reticulum
 #cb_reticulum:RNS_CONFIG=/home/bsb/.reticulum/cb_reticulum
 #cb_reticulum:RNS_AUTOSTART=False
-#cb_reticulum:NOMADNET_CONFIG=/home/bsb/nexus_root/.nomadnetwork/cb_reticulum
+#cb_reticulum:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_reticulum
 #cb_reticulum:NOMADNET_AUTOSTART=False
 #cb_reticulum:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_reticulum:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
@@ -304,9 +304,9 @@
 # bash nexus_pull.sh cb_home
 # --------------------------------------------------------
 #cb_home:NEXUS_COMPOSE_HOME=~/cb.nexus-home
-#cb_home:RNS_CONFIG=/home/bsb/nexus_root/.reticulum/cb_home
+#cb_home:RNS_CONFIG=/home/bsb/.reticulum/cb_home
 #cb_home:RNS_AUTOSTART=False
-#cb_home:NOMADNET_CONFIG=/home/bsb/nexus_root/.nomadnetwork/cb_home
+#cb_home:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_home
 #cb_home:NOMADNET_AUTOSTART=False
 #cb_home:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_home:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
@@ -327,9 +327,9 @@
 # bash nexus_pull.sh cb_delta
 # --------------------------------------------------------
 #cb_delta:NEXUS_COMPOSE_HOME=~/cb.nexus-delta
-#cb_delta:RNS_CONFIG=/home/bsb/nexus_root/.reticulum/cb_delta
+#cb_delta:RNS_CONFIG=/home/bsb/.reticulum/cb_delta
 #cb_delta:RNS_AUTOSTART=False
-#cb_delta:NOMADNET_CONFIG=/home/bsb/nexus_root/.nomadnetwork/cb_delta
+#cb_delta:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_delta
 #cb_delta:NOMADNET_AUTOSTART=False
 #cb_delta:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_delta:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
@@ -350,9 +350,9 @@
 # bash nexus_pull.sh cb_hub
 # --------------------------------------------------------
 #cb_hub:NEXUS_COMPOSE_HOME=~/cb.nexus-hub
-#cb_hub:RNS_CONFIG=/home/bsb/nexus_root/.reticulum/cb_hub
+#cb_hub:RNS_CONFIG=/home/bsb/.reticulum/cb_hub
 #cb_hub:RNS_AUTOSTART=False
-#cb_hub:NOMADNET_CONFIG=/home/bsb/nexus_root/.nomadnetwork/cb_hub
+#cb_hub:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_hub
 #cb_hub:NOMADNET_AUTOSTART=False
 #cb_hub:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_hub:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
@@ -373,9 +373,9 @@
 # bash nexus_pull.sh cb_dev
 # --------------------------------------------------------
 #cb_dev:NEXUS_COMPOSE_HOME=~/nexus_dev
-#cb_dev:RNS_CONFIG=/home/bsb/nexus_root/.reticulum/cb_dev
+#cb_dev:RNS_CONFIG=/home/bsb/.reticulum/cb_dev
 #cb_dev:RNS_AUTOSTART=False
-#cb_dev:NOMADNET_CONFIG=/home/bsb/nexus_root/.nomadnetwork/cb_dev
+#cb_dev:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_dev
 #cb_dev:NOMADNET_AUTOSTART=False
 #cb_dev:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_dev:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
@@ -396,9 +396,9 @@
 # bash nexus_pull.sh cb_cockpit
 # --------------------------------------------------------
 #cb_cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
-#cb_cockpit:RNS_CONFIG=/home/bsb/nexus_root/.reticulum/cb_cockpit
+#cb_cockpit:RNS_CONFIG=/home/bsb/.reticulum/cb_cockpit
 #cb_cockpit:RNS_AUTOSTART=False
-#cb_cockpit:NOMADNET_CONFIG=/home/bsb/nexus_root/.nomadnetwork/cb_cockpit
+#cb_cockpit:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_cockpit
 #cb_cockpit:NOMADNET_AUTOSTART=False
 #cb_cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
