Added all constant beta nodes to config

--- a/.env_master
+++ b/.env_master
@@ -287,7 +287,7 @@
 # --------------------------------------------------------
 #cb_reticulum:NEXUS_COMPOSE_HOME=~/cb.reticulum
 #cb_reticulum:RNS_CONFIG=/home/bsb/.reticulum/cb_reticulum
-#cb_reticulum:RNS_AUTOSTART=False
+#cb_reticulum:RNS_AUTOSTART=True
 #cb_reticulum:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_reticulum
 #cb_reticulum:NOMADNET_AUTOSTART=False
 #cb_reticulum:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
@@ -297,7 +297,7 @@
 #cb_reticulum:NEXUS_PORT_RNSAPI=4980
 #cb_reticulum:NEXUS_PORT_WEB=127.0.0.1:4880
 #cb_reticulum:NEXUS_PORT_JSONAPI=127.0.0.1:4881
-#cb_reticulum:NEXUS_COMMAND=rnsd
+#cb_reticulum:NEXUS_COMMAND=nomadnet
 
 # --------------------------------------------------------
 # 'cb_home' constant-beta <home>[home]:[delta]
