--- a/.env_master
+++ b/.env_master
@@ -297,7 +297,7 @@
 #cb_reticulum:NEXUS_PORT_RNSAPI=4980
 #cb_reticulum:NEXUS_PORT_WEB=127.0.0.1:4880
 #cb_reticulum:NEXUS_PORT_JSONAPI=127.0.0.1:4881
-#cb_reticulum:NEXUS_COMMAND=nomadnet
+#cb_reticulum:NEXUS_COMMAND=rnsd
 
 # --------------------------------------------------------
 # 'cb_home' constant-beta <home>[home]:[delta]
