--- a/.env_master
+++ b/.env_master
@@ -47,6 +47,7 @@
 #default:#NEXUS_CONTAINER=nexus-server_node01
 #default:#NEXUS_CONTAINER_ALIAS=nexus-server_node01
 #default:#NEXUS_NETWORK=nexus-server_net
+#default:#NEXUS_BACKEND_AUTOSTART=True
 #default:#NEXUS_ROOT=/root
 #default:#NEXUS_ROOT_BIND=nexus_root
 #default:#NEXUS_PORT_RNSAPI=4242
@@ -297,6 +298,7 @@
 #cb_reticulum:NEXUS_PORT_RNSAPI=4980
 #cb_reticulum:NEXUS_PORT_WEB=127.0.0.1:4880
 #cb_reticulum:NEXUS_PORT_JSONAPI=127.0.0.1:4881
+#cb_reticulum:NEXUS_BACKEND_AUTOSTART=False
 #cb_reticulum:NEXUS_COMMAND=nomadnet
 
 # --------------------------------------------------------
