Added all constant beta nodes to config

--- a/.env_master
+++ b/.env_master
@@ -152,7 +152,7 @@
 # bash nexus_pull.sh paulchen
 # --------------------------------------------------------
 #paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
-#paulchen:DIREWOLF_AUTOSTART=False
+#paulchen:DIREWOLF_AUTOSTART=True
 #paulchen:DIREWOLF_INSTANCES=VOX_Alpha_1
 #paulchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #paulchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
@@ -178,7 +178,7 @@
 # --------------------------------------------------------
 #karlchen:NEXUS_COMPOSE_HOME=~/nexus
 #karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
-#karlchen:DIREWOLF_AUTOSTART=False
+#karlchen:DIREWOLF_AUTOSTART=True
 #karlchen:DIREWOLF_INSTANCES=VOX_Alpha_1
 #karlchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #karlchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
