--- a/nexus_root/.direwolf/karlchen/VOX_Alpha_1.conf
+++ b/nexus_root/.direwolf/karlchen/VOX_Alpha_1.conf
@@ -24,7 +24,7 @@ PTT GPIO 22
 ###########################################
 # Test Beacon
 #
-# OBEACON comment="Nexus Beacon Karlchen" delay=0:10 every=00:10 OBJNAME=NX:Server lat=0^0.0 long=0^0.0 dest=CQ
+OBEACON comment="Nexus Beacon Karlchen" delay=0:10 every=00:10 OBJNAME=NX:Server lat=0^0.0 long=0^0.0 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
