Added all constant beta nodes to config

--- a/.env_master
+++ b/.env_master
@@ -375,7 +375,7 @@
 # 'cb_dev' constant-beta <dev>[dev]:[delta]:[cockpit]
 # bash nexus_pull.sh cb_dev
 # --------------------------------------------------------
-#cb_dev:NEXUS_COMPOSE_HOME=~/nexus_dev
+#cb_dev:NEXUS_COMPOSE_HOME=~/cb.nexus-dev
 #cb_dev:RNS_CONFIG=/home/bsb/.reticulum/cb_dev
 #cb_dev:RNS_AUTOSTART=False
 #cb_dev:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_dev
@@ -398,7 +398,7 @@
 # 'cb_cockpit' constant-beta <cockpit>[cockpit]:[dev]
 # bash nexus_pull.sh cb_cockpit
 # --------------------------------------------------------
-#cb_cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
+#cb_cockpit:NEXUS_COMPOSE_HOME=~/cb.nexus-cockpit
 #cb_cockpit:RNS_CONFIG=/home/bsb/.reticulum/cb_cockpit
 #cb_cockpit:RNS_AUTOSTART=False
 #cb_cockpit:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_cockpit
