Django server start logging

--- a/.env_master
+++ b/.env_master
@@ -75,7 +75,7 @@
 #default:#DJANGO_SUPERUSER_USERNAME=admin
 #default:#DJANGO_SUPERUSER_PASSWORD=admin
 #default:#DJANGO_SUPERUSER_EMAIL=admin@example.com
-#default:#DJANGO_LOG_LEVEL=debug
+#default:#DJANGO_LOG_LEVEL=info
 #default:
 #default:#################################################################
 #default:# Default Direwolf sound device configuration
@@ -421,3 +421,4 @@
 #cb_cockpit:#NEXUS_LONGPOLL=60
 #cb_cockpit:#NEXUS_TIMEOUT=70
 #cb_cockpit:#NEXUS_COMMAND=start_nexus.sh
+#cb_cockpit:#DJANGO_LOG_LEVEL=debug
