--- a/.env_master
+++ b/.env_master
@@ -403,6 +403,7 @@
 #cb_cockpit:RNS_AUTOSTART=False
 #cb_cockpit:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_cockpit
 #cb_cockpit:NOMADNET_AUTOSTART=False
+#cb_cockpit:DJANGO_LOG_LEVEL=debug
 #cb_cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_cockpit:NEXUS_CONTAINER=nexus-cockpit
@@ -421,4 +422,3 @@
 #cb_cockpit:#NEXUS_LONGPOLL=60
 #cb_cockpit:#NEXUS_TIMEOUT=70
 #cb_cockpit:#NEXUS_COMMAND=start_nexus.sh
-#cb_cockpit:#DJANGO_LOG_LEVEL=debug
