Watch for Twins

--- a/.env_master
+++ b/.env_master
@@ -151,6 +151,9 @@
 # 'paulchen' paulchen  <home>[home]
 # bash nexus_pull.sh paulchen
 # --------------------------------------------------------
+#paulchen:#COMPOSE_PROFILES=auto-update
+#paulchen:#WATCHTOWER_POLL_INTERVAL=600
+#paulchen:#NEXUS_WATCHTOWER=nexus-watchtower
 #paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
 #paulchen:DIREWOLF_AUTOSTART=True
 #paulchen:DIREWOLF_INSTANCES=VOX_Alpha_1
