Watch for Twins

--- a/.env_master
+++ b/.env_master
@@ -179,6 +179,9 @@
 # 'karlchen' karlchen  <home>[home]
 # bash nexus_pull.sh karlchen
 # --------------------------------------------------------
+#karlchen:COMPOSE_PROFILES=auto-update
+#karlchen:WATCHTOWER_POLL_INTERVAL=600
+#karlchen:NEXUS_WATCHTOWER=nexus-watchtower
 #karlchen:NEXUS_COMPOSE_HOME=~/nexus
 #karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
 #karlchen:DIREWOLF_AUTOSTART=True
