Watch for Twins

--- a/.env_master
+++ b/.env_master
@@ -358,6 +358,9 @@
 # 'cb_hub' constant-beta <delta>[delta,lora.delta]:[dev]
 # bash nexus_pull.sh cb_hub
 # --------------------------------------------------------
+#cb_hub:COMPOSE_PROFILES=auto-update
+#cb_hub:WATCHTOWER_POLL_INTERVAL=86400
+#cb_hub:NEXUS_WATCHTOWER=nexus-watchtower
 #cb_hub:NEXUS_COMPOSE_HOME=~/cb.nexus-hub
 #cb_hub:RNS_CONFIG=/home/bsb/.reticulum/cb_hub
 #cb_hub:RNS_AUTOSTART=False
