Watch for Twins

--- a/.env_master
+++ b/.env_master
@@ -152,7 +152,7 @@
 # bash nexus_pull.sh paulchen
 # --------------------------------------------------------
 #paulchen:COMPOSE_PROFILES=auto-update
-#paulchen:WATCHTOWER_POLL_INTERVAL=600
+#paulchen:WATCHTOWER_POLL_INTERVAL=86400
 #paulchen:NEXUS_WATCHTOWER=nexus-watchtower
 #paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
 #paulchen:DIREWOLF_AUTOSTART=True
@@ -180,7 +180,7 @@
 # bash nexus_pull.sh karlchen
 # --------------------------------------------------------
 #karlchen:COMPOSE_PROFILES=auto-update
-#karlchen:WATCHTOWER_POLL_INTERVAL=600
+#karlchen:WATCHTOWER_POLL_INTERVAL=86400
 #karlchen:NEXUS_WATCHTOWER=nexus-watchtower
 #karlchen:NEXUS_COMPOSE_HOME=~/nexus
 #karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
@@ -207,6 +207,9 @@
 # 'orangepi' orangepi <home>[home]
 # bash nexus_pull.sh orangepi
 # --------------------------------------------------------
+#orangepi:COMPOSE_PROFILES=auto-update
+#orangepi:WATCHTOWER_POLL_INTERVAL=86400
+#orangepi:NEXUS_WATCHTOWER=nexus-watchtower
 #orangepi:NEXUS_COMPOSE_HOME=~/nexus
 #orangepi:DIREWOLF_CONFIG=/home/bsb/.direwolf/orangepi
 #orangepi:DIREWOLF_AUTOSTART=False
@@ -234,6 +237,9 @@
 # 'radiobox' radiobox <delta>[lora,lora.delta]
 # bash nexus_pull.sh radiobox
 # --------------------------------------------------------
+#radiobox:COMPOSE_PROFILES=auto-update
+#radiobox:WATCHTOWER_POLL_INTERVAL=86400
+#radiobox:NEXUS_WATCHTOWER=nexus-watchtower
 #radiobox:NEXUS_COMPOSE_HOME=~/nexus
 #radiobox:DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
 #radiobox:DIREWOLF_AUTOSTART=False
