Full update for cb

--- a/.env_master
+++ b/.env_master
@@ -196,7 +196,7 @@
 #karlchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #karlchen:NEXUS_CONTAINER=nexus-twins
 #karlchen:NEXUS_CONTAINER_ALIAS=nexus-twins
-#karlchen:NEXUS_NETWORK=nexus-twins_net
+#karlchen:NEXUS_NETWORK=nexus-twins-net
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
 #karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
@@ -227,7 +227,7 @@
 #orangepi:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #orangepi:NEXUS_CONTAINER=nexus-orangepi
 #orangepi:NEXUS_CONTAINER_ALIAS=nexus-orangepi
-#orangepi:NEXUS_NETWORK=nexus-orangepi_net
+#orangepi:NEXUS_NETWORK=nexus-orangepi-net
 #orangepi:NEXUS_ASPECT=home
 #orangepi:NEXUS_ROLE={"cluster":"home"}
 #orangepi:#NEXUS_LONGPOLL=60
@@ -252,7 +252,7 @@
 #radiobox:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
 #radiobox:NEXUS_CONTAINER=nexus-radiobox
 #radiobox:NEXUS_CONTAINER_ALIAS=nexus-radiobox
-#radiobox:NEXUS_NETWORK=nexus-radiobox_net
+#radiobox:NEXUS_NETWORK=nexus-radiobox-net
 #radiobox:NEXUS_ASPECT=delta
 #radiobox:NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
 #radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
@@ -307,6 +307,7 @@
 #cb_reticulum:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_reticulum:NEXUS_CONTAINER=nexus-reticulum
 #cb_reticulum:NEXUS_CONTAINER_ALIAS=nexus-reticulum
+#cb_reticulum:NEXUS_NETWORK=nexus-reticulum-net
 #cb_reticulum:NEXUS_PORT_RNSAPI=4980
 #cb_reticulum:NEXUS_PORT_WEB=127.0.0.1:4880
 #cb_reticulum:NEXUS_PORT_JSONAPI=127.0.0.1:4881
@@ -399,7 +400,7 @@
 #cb_dev:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_dev:NEXUS_CONTAINER=nexus-dev
 #cb_dev:NEXUS_CONTAINER_ALIAS=nexus-dev
-#cb_dev:NEXUS_NETWORK=nexus-dev_net
+#cb_dev:NEXUS_NETWORK=nexus-dev-net
 #cb_dev:NEXUS_PORT_RNSAPI=4254
 #cb_dev:NEXUS_PORT_WEB=127.0.0.1:4384
 #cb_dev:NEXUS_PORT_JSONAPI=127.0.0.1:4344
@@ -423,7 +424,7 @@
 #cb_cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_cockpit:NEXUS_CONTAINER=nexus-cockpit
 #cb_cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
-#cb_cockpit:NEXUS_NETWORK=nexus-cockpit_net
+#cb_cockpit:NEXUS_NETWORK=nexus-cockpit-net
 #cb_cockpit:NEXUS_PORT_RNSAPI=4255
 #cb_cockpit:NEXUS_PORT_WEB=127.0.0.1:4285
 #cb_cockpit:NEXUS_PORT_JSONAPI=127.0.0.1:4345
