--- a/nexus_root/.direwolf/digirig_1.conf
+++ b/nexus_root/.direwolf/digirig_1.conf
@@ -12,11 +12,15 @@ CHANNEL 0
 MYCALL N1CALL-0
 MODEM 1200
 FULLDUP OFF
+PTT /dev/ttyCAT RTS
+MODEM 1200
+FULLDUP OFF
 DWAIT 0
 SLOTTIME 30
 PERSIST 160
 TXDELAY 30
 TXTAIL 10
+
 ###########################################
 # Test Beacon
 #
