digirig mobile config file

--- a/.env_master
+++ b/.env_master
@@ -161,10 +161,10 @@
 #paulchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #paulchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
 
-#paulchen:#DIREWOLF_INSTANCES=digirig_1
-#paulchen:#DIREWOLF_DIGIRIG_1_MIC_CAPTURE_VOLUME=20%
-#paulchen:#DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=40%
-#paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
+#paulchen:DIREWOLF_INSTANCES=digirig_1
+#paulchen:DIREWOLF_DIGIRIG_1_MIC_CAPTURE_VOLUME=20%
+#paulchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=40%
+#paulchen:NEXUS_CAT_DEVICE=/dev/ttyUSB0
 
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
 #paulchen:RNS_AUTOSTART=False
