digirig mobile config file

--- a/.env_master
+++ b/.env_master
@@ -161,10 +161,10 @@
 #paulchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #paulchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
 
-#paulchen:#DIREWOLF_INSTANCES=digirig_1
-#paulchen:#DIREWOLF_DIGIRIG_1_MIC_CAPTURE_VOLUME=80%
-#paulchen:#DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=80%
-#paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
+#paulchen:DIREWOLF_INSTANCES=digirig_1
+#paulchen:DIREWOLF_DIGIRIG_1_MIC_CAPTURE_VOLUME=80%
+#paulchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=80%
+#paulchen:NEXUS_CAT_DEVICE=/dev/ttyUSB0
 
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
 #paulchen:RNS_AUTOSTART=False
@@ -192,9 +192,16 @@
 #karlchen:NEXUS_COMPOSE_HOME=~/nexus
 #karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
 #karlchen:DIREWOLF_AUTOSTART=True
+
 #karlchen:DIREWOLF_INSTANCES=VOX_Alpha_1
 #karlchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #karlchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
+
+#karlchen:DIREWOLF_INSTANCES=digirig_1
+#karlchen:DIREWOLF_DIGIRIG_1_MIC_CAPTURE_VOLUME=80%
+#karlchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=80%
+#karlchen:NEXUS_CAT_DEVICE=/dev/ttyUSB0
+
 #karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
 #karlchen:RNS_AUTOSTART=False
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
