--- a/nexus_root/.reticulum/paulchen/config
+++ b/nexus_root/.reticulum/paulchen/config
@@ -19,14 +19,14 @@
 
   [[TCP Client Interface - Nexus.DeltaMatrix]]
     type = TCPClientInterface
-    interface_enabled = True
+    interface_enabled = False
     outgoing = True
     target_host = nexus.deltamatrix.org
     target_port = 4251
 
   [[RNode LoRa Interface]]
     type = RNodeInterface
-    interface_enabled = True
+    interface_enabled = False
     outgoing = True
     port = /dev/ttyRNODE
     frequency = 867200000
