digirig mobile config file

--- a/.env_master
+++ b/.env_master
@@ -178,7 +178,7 @@
 #paulchen:NEXUS_NETWORK=nexus-paulchen_net
 #paulchen:NEXUS_ASPECT=home
 #paulchen:NEXUS_ROLE={"cluster":"home"}
-#paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#paulchen:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #paulchen:#NEXUS_LONGPOLL=60
 #paulchen:#NEXUS_TIMEOUT=70
 
@@ -213,7 +213,7 @@
 #karlchen:NEXUS_NETWORK=nexus-karlchen-net
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
-#karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#karlchen:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:#NEXUS_LONGPOLL=60
 #karlchen:#NEXUS_TIMEOUT=70
 
