digirig mobile config file

--- a/nexus_root/.direwolf/paulchen/digirig_1.conf
+++ b/nexus_root/.direwolf/paulchen/digirig_1.conf
@@ -10,8 +10,6 @@
 ADEVICE plughw:Device,0
 CHANNEL 0
 MYCALL DD8SB-0
-MODEM 1200
-FULLDUP OFF
 PTT /dev/ttyCAT RTS
 MODEM 1200
 FULLDUP OFF
@@ -25,7 +23,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-# OBEACON comment="Nexus Beacon Paulchen" delay=0:10 every=00:10 OBJNAME=NX:Server lat=0^0.0 long=0^0.0 dest=CQ
+OBEACON comment="Nexus Beacon Paulchen" delay=0:10 every=00:10 OBJNAME=NX:Server lat=0^0.0 long=0^0.0 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
