--- a/nexus_root/.direwolf/paulchen/digirig_1.conf
+++ b/nexus_root/.direwolf/paulchen/digirig_1.conf
@@ -23,7 +23,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-OBEACON comment="Nexus Beacon Paulchen" delay=0:10 every=00:10 OBJNAME=NX:Server lat=0^0.0 long=0^0.0 dest=CQ
+# OBEACON comment="Nexus Beacon Paulchen" delay=0:10 every=00:10 OBJNAME=NX:Server lat=0^0.0 long=0^0.0 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
