--- a/nexus_root/.reticulum/paulchen/config
+++ b/nexus_root/.reticulum/paulchen/config
@@ -48,5 +48,9 @@
     target_port = 8001
 #    network_name = myTwinCluster
 #    passphrase = myTwinCluster
-    id_callsign = DD8SB-2
-    id_interval = 600
+#    id_callsign = DD8SB-2
+#    id_interval = 600
+    preamble = 150
+    txtail = 10
+    slottime = 20
+    persistence = 200
