--- a/.env_master
+++ b/.env_master
@@ -166,6 +166,8 @@
 #paulchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
 #paulchen:NEXUS_CAT_DEVICE=/dev/ttyUSB0
 
+#paulchen:#DIREWOLF_OPTIONS="-t 0 -T %T -d pnox"
+
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
 #paulchen:RNS_AUTOSTART=False
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
