digirig mobile config file

--- a/.env_master
+++ b/.env_master
@@ -204,6 +204,8 @@
 #karlchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
 #karlchen:NEXUS_CAT_DEVICE=/dev/ttyUSB0
 
+#karlchen:DIREWOLF_OPTIONS="-t 0 -T %T -d no -q dx -a 20"
+
 #karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
 #karlchen:RNS_AUTOSTART=False
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
