Multi RNode Devices and Template updates

--- a/.env_master
+++ b/.env_master
@@ -155,23 +155,18 @@
 #paulchen:WATCHTOWER_POLL_INTERVAL=86400
 #paulchen:NEXUS_WATCHTOWER=nexus-watchtower
 #paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
-#paulchen:DIREWOLF_AUTOSTART=True
-
+#paulchen:DIREWOLF_AUTOSTART=False
 #paulchen:DIREWOLF_INSTANCES=VOX_Alpha_1
 #paulchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #paulchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
-
 #paulchen:DIREWOLF_INSTANCES=digirig_1
 #paulchen:DIREWOLF_DIGIRIG_1_MIC_CAPTURE_VOLUME=10%
 #paulchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
-#paulchen:NEXUS_CAT_DEVICE=/dev/ttyUSB0
-
 #paulchen:DIREWOLF_OPTIONS="-t 0 -T %T -d no -q dx -a 20"
-
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
 #paulchen:RNS_AUTOSTART=False
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
-#paulchen:NOMADNET_AUTOSTART=False
+#paulchen:NOMADNET_AUTOSTART=True
 #paulchen:NEXUS_COMPOSE_HOME=~/nexus
 #paulchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #paulchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
@@ -180,7 +175,9 @@
 #paulchen:NEXUS_NETWORK=nexus-paulchen_net
 #paulchen:NEXUS_ASPECT=home
 #paulchen:NEXUS_ROLE={"cluster":"home"}
-#paulchen:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#paulchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
+#paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
 #paulchen:#NEXUS_LONGPOLL=60
 #paulchen:#NEXUS_TIMEOUT=70
 
@@ -193,23 +190,18 @@
 #karlchen:NEXUS_WATCHTOWER=nexus-watchtower
 #karlchen:NEXUS_COMPOSE_HOME=~/nexus
 #karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
-#karlchen:DIREWOLF_AUTOSTART=True
-
+#karlchen:DIREWOLF_AUTOSTART=False
 #karlchen:DIREWOLF_INSTANCES=VOX_Alpha_1
 #karlchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #karlchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
-
 #karlchen:DIREWOLF_INSTANCES=digirig_1
 #karlchen:DIREWOLF_DIGIRIG_1_MIC_CAPTURE_VOLUME=10%
 #karlchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
-#karlchen:NEXUS_CAT_DEVICE=/dev/ttyUSB0
-
 #karlchen:DIREWOLF_OPTIONS="-t 0 -T %T -d no -q dx -a 20"
-
 #karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
 #karlchen:RNS_AUTOSTART=False
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
-#karlchen:NOMADNET_AUTOSTART=False
+#karlchen:NOMADNET_AUTOSTART=True
 #karlchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #karlchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #karlchen:NEXUS_CONTAINER=nexus-karlchen
@@ -217,7 +209,9 @@
 #karlchen:NEXUS_NETWORK=nexus-karlchen-net
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
-#karlchen:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#karlchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
+#karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
 #karlchen:#NEXUS_LONGPOLL=60
 #karlchen:#NEXUS_TIMEOUT=70
 
