--- a/nexus_root/.reticulum/paulchen/config
+++ b/nexus_root/.reticulum/paulchen/config
@@ -19,14 +19,14 @@
 
   [[TCP Client Interface - Nexus.DeltaMatrix]]
     type = TCPClientInterface
-    interface_enabled = False
+    interface_enabled = True
     outgoing = True
     target_host = nexus.deltamatrix.org
     target_port = 4251
 
-  [[RNode LoRa Interface]]
+  [[RNode LoRa Interface 868]]
     type = RNodeInterface
-    interface_enabled = False
+    interface_enabled = True
     outgoing = True
     port = /dev/ttyRNODE
     frequency = 867200000
@@ -40,9 +40,25 @@
     passphrase = myTwinCluster
     flow_control = False
 
+  [[RNode LoRa Interface 169]]
+    type = RNodeInterface
+    interface_enabled = True
+    outgoing = True
+    port = /dev/ttyRNODE2
+    frequency = 169200000
+    bandwidth = 41700
+    txpower = 7
+    spreadingfactor = 8
+    codingrate = 5
+#    id_callsign = DD8SB-5
+#    id_interval = 600
+    network_name = myTwinCluster
+    passphrase = myTwinCluster
+    flow_control = False
+
   [[TCP KISS Interface #1]]
     type = TCPClientInterface
-    interface_enabled = True
+    interface_enabled = False
     kiss_framing = True
     target_host = 127.0.0.1
     target_port = 8001
